# zle-py

./: .gitignore  README.md  fgen.ipynb  gen.ipynb  pyproject.toml
examples/: eigs_usage.ipynb  fgen_usage.ipynb  gen_usage.ipynb
matrix_generation/: fgen.py  gen.py
src/zlepy/: __about__.py  __init__.py  fgen.py  gen.py  szleig.py
tests/: __init__.py  testing_utils.py
tests/test_eigs/: test_basic.py  test_batch_sizes.py  test_coeffs.py
tests/test_fgen/: test_fgen.py
tests/test_gen/: test_gen.py
tests/test_szleig/: szleig_base_tests.py  test_batch_sizes.py  test_coeffs.py
zle_src/: __init__.py  eigs.py  fgen.py
